[package]
name = "svisual-stm32f1"
version = "0.2.1"
authors = ["Andrey Zgarbul <zgarbul.andrey@gmail.com>"]
edition = "2018"

[dependencies]
heapless = "0.3.0"
generic-array = "0.12"
typenum = "1.10"
byteorder = { version = "1", default-features = false }

[dependencies.svisual]
git = "https://github.com/burrbull/svisual-rs"

[dependencies.stm32f103xx-hal]
git = "https://github.com/burrbull/stm32f103xx-hal"

[dependencies.cast]
default-features = false
version = "0.2.2"
