[package]
name = "svisual-stm32f1"
version = "0.2.2"
authors = ["Andrey Zgarbul <zgarbul.andrey@gmail.com>"]
edition = "2018"

[dependencies]
heapless = "0.5.0"
generic-array = "0.13"
typenum = "1.10"
as-slice = {git = "https://github.com/burrbull/as-slice", branch="patch-1"}
svisual = "0.2.4"

[dependencies.byteorder]
default-features = false
version = "1.0"

[dependencies.stable_deref_trait]
default-features = false
version = "1.1"

[dependencies.cast]
default-features = false
version = "0.2.2"

[dependencies.stm32f1xx-hal]
git = "https://github.com/stm32-rs/stm32f1xx-hal"
features = ["stm32f103"]
