[package]
name = "svisual-stm32f1"
version = "0.2.2"
authors = ["Andrey Zgarbul <zgarbul.andrey@gmail.com>"]
edition = "2018"

[dependencies]
heapless = "0.5"
generic-array = "0.13"
typenum = "1.10"
as-slice = "0.1"
svisual = "0.2.4"
nb = "0.1"
embedded-hal = "0.2"

[dependencies.byteorder]
default-features = false
version = "1.0"

[dependencies.cast]
default-features = false
version = "0.2.2"

[dependencies.stm32f1xx-hal]
git = "https://github.com/stm32-rs/stm32f1xx-hal"
features = ["stm32f103"]

[dev-dependencies]
panic-halt = "0.2.0"
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
